<resources>
    <string name="app_name">Trips</string>
    <string name="tab_text_1">Upcoming Trips</string>
    <string name="tab_text_2">Past Trips</string>
    <string name="trip_name_textView">Trip name</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="more_details">More Details</string>
    <string name="add_trip">Add Trip</string>
    <string name="your_date">Trip Date</string>
    <string name="your_time">Trip Time</string>
    <string name="name">Name</string>
    <string name="upcoming">Upcoming</string>
    <string name="done">Done</string>
    <string name="cancelled">Cancelled</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="edit">Edit</string>
    <string name="notes">Notes</string>
    <string name="create_trip">Create a Trip</string>
    <string name="edit_trip_details">Edit Trip Details</string>
    <string name="round_trip">Round Trip</string>
    <string name="add_note">Add Your Note.</string>
    <string name="add_up_to">You Can Add Up To Ten Notes</string>
    <string name="add_a_note">Add a Note</string>
    <string name="save_notes">Save Notes</string>
    <string name="delete">Delete</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="later">Later</string>
    <string name="trip_notes">Trip Notes</string>
    <string name="delete_trip">Confirm delete trip?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_message">Allow Trips to display over other apps.</string>
    <string name="permission_toast">The Application must have this permission for the alert functionality.</string>
    <string name="permission_denied">Permission denied by the user</string>
    <string name="name_required">Trip name is required</string>
    <string name="start_required">Start location is required</string>
    <string name="end_required">End location is required</string>
    <string name="date_required">Date is required</string>
    <string name="time_required">Time is required</string>
    <string name="max_notes">You Reached The Maximum of Notes Number.</string>
    <string name="notification_message">You are waiting for trip</string>
    <string name="sync">Sync</string>
    <string name="sign_out">Sign Out</string>
    <string-array name="repetition">
        <item>No Repeat</item>
        <item>Repeat Daily</item>
        <item>Repeat Weekly</item>
        <item>Repeat Monthly</item>
    </string-array>
    <string name="api_key" translatable="false">AIzaSyDYOqNd-As1cvDHc0tlGfc4tKBsbVRHU8I</string>
</resources>