<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quantum_amber50">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/quantum_amber50"
        android:orientation="vertical"
        tools:context=".view.trip.AddEditTripActivity">

        <TextView
            android:layout_gravity="center"
            style="@style/font_style"
            android:text="@string/trip_details"
            app:drawableLeftCompat="@drawable/iconscar30" />

        <TextView
            android:id="@+id/tripNameTextView"
            style="@style/font_style"
            android:text="@string/trip_name_textView"
            app:drawableLeftCompat="@drawable/iconspencil30" />

        <EditText
            android:id="@+id/tripNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            />

        <TextView
            android:id="@+id/tripNameTextView2"
            style="@style/font_style"
            android:text="@string/start_point"
            app:drawableLeftCompat="@drawable/iconslocationupdate30" />

        <fragment
            android:id="@+id/place_autocomplete_fragment_start_point"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/end_point_textView"
            style="@style/font_style"
            android:text="@string/end_point"
            app:drawableLeftCompat="@drawable/iconslocationupdate30" />

        <fragment
            android:id="@+id/place_autocomplete_fragment_end_point"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textView"
            style="@style/font_style"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:text="@string/more_details"
            app:drawableLeftCompat="@drawable/iconsviewdetails30" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/calendarImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/iconscalendar70" />

            <TextView
                android:id="@+id/showDateTextView"
                style="@style/font_style"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:text="@string/your_date" />

            <ImageView
                android:id="@+id/timeImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/iconsclock70" />

            <TextView
                android:id="@+id/showTimeTextView"
                style="@style/font_style"
                android:layout_gravity="center"
                android:text="@string/your_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/iconsarrows70"/>
            <CheckBox
                android:id="@+id/roundTripCheckBox"
                style="@style/font_style"
                android:layout_marginBottom="30dp"
                android:text="Round Trip" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>